--- a/components/pages/home/CompletedChallenges/CompletedChallenges.module.scss
+++ b/components/pages/home/CompletedChallenges/CompletedChallenges.module.scss
@@ -1,28 +1,16 @@
 .completed__challenges {
   padding-top: 120px;
-  & .title {
-    color: #fff;
-    font-family: var(--font-montserrat);
-    font-size: 2.4rem;
-    font-weight: 700;
-    line-height: 1.1;
-    text-align: center;
-  }
-  & .subtitle {
-    color: #cccccceb;
-    font-size: 1.3rem;
-    font-style: italic;
-    font-weight: 300;
-    margin-top: 12px;
-    text-align: center;
-  }
+
   & .cards {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 16px;
-    margin-top: 1rem;
+    margin-top: 32px;
     & .card {
       align-items: flex-start;
+      animation: appear linear;
+      animation-timeline: view();
+      animation-range: entry 0;
       border-radius: 20px;
       border: 1px solid #7a56d6;
       padding: 10px;
@@ -119,14 +107,15 @@
       }
     }
   }
-  & .see__more {
-    display: flex;
-    justify-content: center;
-    margin-top: 24px;
-    & button {
-      font-size: 1.1rem;
-      font-weight: 700;
-      color: #7a56d6;
-    }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+    clip-path: inset(100%, 100%, 0, 0);
+  }
+  to {
+    opacity: 1;
+    clip-path: inset(0, 0, 0, 0);
   }
 }
