--- a/components/pages/home/Challenges/ChallengeCard/ChallengeCard.module.scss
+++ b/components/pages/home/Challenges/ChallengeCard/ChallengeCard.module.scss
@@ -1,4 +1,7 @@
 .card {
+  animation: appear linear;
+  animation-timeline: view();
+  animation-range: entry 0;
   background-color: #2c205370;
   border-radius: 20px;
   border: 1px solid #7a56d6;
@@ -9,6 +12,7 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+
   &__icon {
     width: 260px;
     & img {
@@ -59,5 +63,16 @@
   }
   &:hover {
     background-color: #090210;
+  }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+    clip-path: inset(100%, 100%, 0, 0);
+  }
+  to {
+    opacity: 1;
+    clip-path: inset(0, 0, 0, 0);
   }
 }
