Header responsiveness added

--- a/components/shared/Header/Header.module.scss
+++ b/components/shared/Header/Header.module.scss
@@ -9,10 +9,12 @@
   z-index: 9;
   & .logo {
     display: block;
+    height: 72px;
     width: 140px;
     & img {
-      width: 100%;
+      height: 100%;
       object-fit: contain;
+      width: 100%;
     }
   }
   & .navigation {
@@ -35,6 +37,86 @@
           color: #7a56d6;
         }
       }
+    }
+  }
+  & .burger {
+    display: none;
+    &__button {
+      background-color: #7a56d6;
+      border-radius: 100px;
+      width: 58px;
+      height: 58px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 18px;
+      & img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
+    }
+  }
+}
+
+.burger__menu {
+  align-items: center;
+  background-color: #000;
+  box-shadow: 42px 42px 55px #20355a17;
+  display: flex;
+  flex-direction: column;
+  left: 0;
+  padding-bottom: 20px;
+  padding-top: 15px;
+  position: absolute;
+  top: 90px;
+  transform: translateY(-500px) translateX(0px);
+  transition: all, transform 400ms ease-out;
+  width: 100%;
+  z-index: 8;
+
+  & a {
+    color: #fff;
+    text-align: center;
+    display: block;
+    font-size: 15px;
+    padding: 20px;
+    transition: 0.3s;
+    &:hover {
+      color: #7a56d6;
+    }
+  }
+  &.active {
+    transform: translateY(0px) translateX(0px);
+  }
+}
+@media (max-width: 1200px) {
+  .header {
+    & .logo {
+      width: 120px;
+    }
+    & .navigation {
+      gap: 8px;
+      margin-right: 8px;
+
+      & a {
+        width: 100%;
+        & span {
+          font-size: 12px;
+        }
+      }
+    }
+    & .burger {
+      display: block;
+    }
+  }
+}
+
+@media (max-width: 993px) {
+  .header {
+    & .navigation,
+    & .button__wrapper {
+      display: none;
     }
   }
 }
