--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -33,6 +33,8 @@ body {
   height: 100%;
   min-width: 340px;
   font-family: var(--font-open-sans);
+  scrollbar-color: #7a56d6 #7a56d6;
+  scrollbar-width: thin;
 }
 body {
   line-height: 1;
