--- a/components/shared/Footer/Footer.module.scss
+++ b/components/shared/Footer/Footer.module.scss
@@ -87,3 +87,53 @@
     margin-top: 32px;
   }
 }
+
+@media (max-width: 993px) {
+  .footer {
+    &__inner {
+      align-items: center;
+      flex-direction: column;
+      & .left {
+        width: 100%;
+        & .logo {
+          margin: 0 auto;
+        }
+      }
+      & .right {
+        width: 100%;
+      }
+    }
+    & .copyright {
+      text-align: center;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .footer {
+    padding-bottom: 80px;
+    &__inner {
+      & .left {
+        & .desc {
+          font-size: 1rem;
+          margin-top: 16px;
+          text-align: center;
+        }
+        & .socials {
+          margin: 32px auto;
+        }
+      }
+      & .right {
+        flex-direction: column;
+        gap: 48px;
+        & .nav__element {
+          width: 100%;
+          text-align: center;
+        }
+      }
+    }
+    & .copyright {
+      margin-top: 80px;
+    }
+  }
+}
