--- a/assets/css/global.scss
+++ b/assets/css/global.scss
@@ -35,6 +35,7 @@ body {
   font-family: var(--font-open-sans);
   scrollbar-color: #7a56d6 #7a56d6;
   scrollbar-width: thin;
+  overflow-x: hidden;
 }
 body {
   line-height: 1;
