--- a/components/pages/home/Hero/Hero.module.scss
+++ b/components/pages/home/Hero/Hero.module.scss
@@ -38,13 +38,12 @@
     line-height: 1;
   }
   & .video__wrapper {
-    border: 1px solid #7a56d6;
     border-radius: 8px;
+    border: 1px solid #7a56d6;
+    height: 582px;
     margin-top: 20px;
     padding: 10px;
     width: 60%;
-    height: 582px;
-    margin-top: 20px;
     & iframe {
       width: 100%;
       height: 100%;
@@ -64,5 +63,63 @@
   }
   100% {
     background-position: -200% center;
+  }
+}
+
+@media (max-width: 993px) {
+  .hero {
+    & h1 {
+      font-size: 4rem;
+    }
+    & .video__wrapper {
+      width: 65%;
+      height: 382px;
+    }
+    & .buttons {
+      display: flex;
+      gap: 16px;
+      flex-wrap: wrap-reverse;
+      justify-content: center;
+    }
+  }
+}
+
+@media (max-width: 768px) {
+  .hero {
+    & .subtitle {
+      text-align: center;
+      margin-top: 4px;
+    }
+    & .video__wrapper {
+      width: 90%;
+      height: 382px;
+    }
+    & .buttons {
+      flex-direction: column;
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .hero {
+    & h1 {
+      font-size: 3.5rem;
+      text-align: center;
+    }
+    & .video__wrapper {
+      height: 282px;
+    }
+  }
+}
+
+@media (max-width: 400px) {
+  .hero {
+    & h1 {
+      font-size: 48px;
+    }
+    & .subtitle {
+      font-size: 18px;
+    }
   }
 }
