--- a/components/pages/home/Rewards/Rewards.module.scss
+++ b/components/pages/home/Rewards/Rewards.module.scss
@@ -17,3 +17,31 @@
     margin-top: 30px;
   }
 }
+
+@media (max-width: 993px) {
+  .rewards {
+    & .title {
+      // font-size: 1.8rem;
+      // line-height: 2rem;
+    }
+    &__cards {
+      gap: 24px;
+      flex-wrap: wrap;
+      margin-top: 24px;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .rewards {
+    & .title {
+      // font-size: 1.8rem;
+      // line-height: 2rem;
+    }
+    &__cards {
+      display: grid;
+      grid-template-columns: repeat(1, 1fr);
+      width: 100%;
+    }
+  }
+}
