--- a/components/pages/home/Challenges/Challenges.module.scss
+++ b/components/pages/home/Challenges/Challenges.module.scss
@@ -8,3 +8,23 @@
     margin-top: 36px;
   }
 }
+
+@media (max-width: 993px) {
+  .challenges {
+    padding-top: 80px;
+
+    & .cards {
+      gap: 16px;
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .challenges {
+    & .cards {
+      gap: 15px;
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+}
