--- a/components/shared/TitleWrapper/TitleWrapper.module.scss
+++ b/components/shared/TitleWrapper/TitleWrapper.module.scss
@@ -1,7 +1,4 @@
 .title {
-  // transform: translate3d(0px, 0px, 0px) scale3d(1, 1, 1) rotateX(0deg)
-  //   rotateY(0deg) rotateZ(0deg) skew(0deg, 0deg);
-  // transform-style: preserve-3d;
   color: #fff;
   font-family: var(--font-montserrat);
   font-size: 2.4rem;
@@ -16,4 +13,13 @@
   font-weight: 300;
   margin-top: 12px;
   text-align: center;
+}
+
+@media (max-width: 480px) {
+  .title {
+    font-size: 2rem;
+  }
+  .subtitle {
+    font-size: 0.9rem;
+  }
 }
