--- a/components/pages/home/Guide/Timeline/Timeline.module.scss
+++ b/components/pages/home/Guide/Timeline/Timeline.module.scss
@@ -124,3 +124,36 @@
     opacity: 1;
   }
 }
+
+@media (max-width: 768px) {
+  .timeline {
+    &__progress {
+      left: 6px;
+    }
+
+    & .timeline__item {
+      grid-template-columns: 64px 1fr;
+      width: 100%;
+
+      & .left {
+        grid-area: 1 / 2 / 2 / 3;
+
+        & p {
+          text-align: left;
+          align-self: flex-start;
+          margin-bottom: 24px;
+          font-size: 1.5rem;
+        }
+      }
+
+      & .center {
+        grid-area: 1 / 1 / 3 / 2;
+        justify-content: flex-start;
+      }
+
+      & .right {
+        grid-area: span 1 / span 1 / span 1 / span 1;
+      }
+    }
+  }
+}
