--- a/components/pages/home/KnowMore/KnowMore.module.scss
+++ b/components/pages/home/KnowMore/KnowMore.module.scss
@@ -26,3 +26,25 @@
     }
   }
 }
+
+@media (max-width: 993px) {
+  .know__more {
+    & .video__wrapper {
+      height: 363px;
+      width: 80%;
+    }
+  }
+}
+
+@media (max-width: 480px) {
+  .know__more {
+    & .title {
+      font-size: 1.5rem;
+      line-height: 1.3;
+    }
+    & .video__wrapper {
+      height: 363px;
+      width: 100%;
+    }
+  }
+}
