--- a/components/pages/home/Subscribe/Subscribe.module.scss
+++ b/components/pages/home/Subscribe/Subscribe.module.scss
@@ -80,3 +80,27 @@
     clip-path: inset(0, 0, 0, 0);
   }
 }
+@media (max-width: 1200px) {
+  .subscribe {
+    & .mentors {
+      grid-template-columns: repeat(3, 1fr);
+      gap: 24px;
+    }
+  }
+}
+@media (max-width: 993px) {
+  .subscribe {
+    padding-top: 80px;
+    & .mentors {
+      grid-template-columns: repeat(2, 1fr);
+      gap: 16px;
+    }
+  }
+}
+@media (max-width: 993px) {
+  .subscribe {
+    & .mentors {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+}
