--- a/components/shared/Banner/Banner.module.scss
+++ b/components/shared/Banner/Banner.module.scss
@@ -27,3 +27,18 @@
     margin-bottom: 12px;
   }
 }
+
+@media (max-width: 480px) {
+  .banner {
+    padding: 20px;
+
+    & .title {
+      font-size: 24px;
+      line-height: 1.2;
+    }
+    & .subtitle {
+      font-size: 16px;
+      line-height: 22.4px;
+    }
+  }
+}
